<resources>
    <string name="app_name">FaceSign</string>


    <!--  login string  -->
    <string name="login_label_username">学号</string>
    <string name="login_label_passward">密码</string>
    <string name="login_button_sure">登录</string>
    <string name="login_button_cancel">取消</string>

    <!-- loading string -->
    <string name="loading_label_isLogining">识别中...</string>
    <string name="loading_btn_cannel">取消</string>


    <!-- main activity -->
    <string name="find_text">课程</string>
    <string name="me_text">考勤</string>
    <string name="wechat_text">个人</string>
    <string name="title_name">微信</string>


    <!-- Personal Info activity -->
    <string name="person_info_fragment_name">姓名</string>
    <string name="person_info_fragment_number">学号：</string>
    <string name="person_info_fragment_major">专业：</string>
    <string name="person_info_fragment_school">学院：</string>
    <string name="person_info_fragment_grade">年级：</string>

    <!-- course sign activity -->
    <string name="course_sign_activity_name">名称</string>
    <string name="course_sign_activity_class">教室</string>
    <string name="course_sign_activity_teacher">教师</string>
    <string name="course_sign_activity_section">节数</string>
    <string name="course_sign_activity_weeks">周数</string>
    <string name="course_sign_activity_btn_sign">签到</string>
    <string name="course_sign_activity_btn_cannel">取消</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_location">定位</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
