<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/backgroud_line_buttom">

    <LinearLayout
        android:id="@+id/line1"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_weight="1"
            android:id="@+id/ic_1"
            android:src="@drawable/find_normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:textColor="@color/colorTextViewNormal"
            android:text="@string/find_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_weight="1"
            android:id="@+id/ic_2"
            android:src="@drawable/wechat_normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textview_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:textColor="@color/colorTextViewNormal"
            android:text="@string/wechat_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_weight="1"
            android:id="@+id/ic_3"
            android:src="@drawable/me_normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/textview_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11dp"
            android:textColor="@color/colorTextViewNormal"
            android:text="@string/me_text"/>
    </LinearLayout>
</LinearLayout>