<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackgroud"
    android:layout_margin="0dp"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical">



    <RelativeLayout
        android:id="@+id/layout_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="0dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/background_login_div1">


        <AutoCompleteTextView
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"
            android:background="@null"
            android:textSize="24dp"
            android:hint="@string/login_label_username"/>
        <!--
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username_edit"
                    android:layout_alignParentTop="true"
                    android:hint="@string/login_label_username"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:background="@null"
                    android:textSize="24dp"
                    />

        -->
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="0dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/background_login_div2">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit"
            android:layout_alignParentTop="true"
            android:hint="@string/login_label_passward"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="24dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:background="@null" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_sure"
        android:id="@+id/login_button"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="25dip"
        android:textSize="20dp"
        android:background="@drawable/backgroup_login_button"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:onClick="onClickLoginBtn" />




    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <ProgressBar
            android:id="@+id/bar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />


    </RelativeLayout>

</LinearLayout>
